# mef3io-server

./: .dockerignore  .gitignore  .gitlab-ci.yml  BENCHMARKS.md  CITATION.cff  CONTRIBUTING.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile_CI  Dockerfile_local  IMPLEMENTATION_SUMMARY.md  PARALLEL_READING_ARCHITECTURE.md  README.md  SECURITY.md  bnel-mef3-server.sh  brainmaze-mef3-server.sh  mef3io-server.sh  mkdocs.yml  pyproject.toml  results.json  run_benchmarks.sh
.claude/agents/: code-tester.md
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  release.yml
benchmark_results/: benchmark.json  benchmark_report.md  crossover_curve.json  crossover_curve.md
bnel_mef3_server/: __init__.py  client.py
bnel_mef3_server/protobufs/: gRPCMef3Server_pb2.py  gRPCMef3Server_pb2.pyi  gRPCMef3Server_pb2_grpc.py
bnel_mef3_server/server/: cache.py  file_manager.py  log_manager.py  mef3_server.py
brainmaze_mef3_server/: __init__.py  client.py
brainmaze_mef3_server/protobufs/: gRPCMef3Server.proto  gRPCMef3Server_pb2.py  gRPCMef3Server_pb2.pyi  gRPCMef3Server_pb2_grpc.py  grpcMef3Server.proto
brainmaze_mef3_server/server/: __init__.py  __main__.py  cache.py  file_manager.py  mef3_server.py  reader_pool.py
demo/: run_big_data.py  run_client_demo.py  run_docker_demo.sh
docs/: README.md  conf.py  contributing.md  index.md  index.rst  install.md  quickstart.md
docs/api/: client.md  client.rst  config_manager.md  config_manager.rst  file_manager.md  file_manager.rst  log_manager.md  log_manager.rst  reader_pool.md  reader_pool.rst  server.md  server.rst  tile_cache.md  tile_cache.rst
docs/guides/: client.md  configuration.md  docker.md
docs/reference/: benchmarks.md  grpc_api.md
mef3io_server/: __init__.py  client.py
mef3io_server/protobufs/: gRPCMef3Server_pb2.py  gRPCMef3Server_pb2_grpc.py
mef3io_server/server/: __init__.py  __main__.py  config_manager.py  file_manager.py  mef3_server.py  reader_pool.py  tile_cache.py
tests/: benchmark_config.json  benchmark_data.py  benchmark_report.py  conftest.py  test_access_patterns.py  test_automated_processing.py  test_client.py  test_crossover_curve.py  test_file_manager.py  test_get_segments.py  test_integration.py  test_mef3_server.py  test_multitool_shared_session.py  test_read_signal_range.py  test_reader_pool.py  test_real_life_data.py  test_signal_range_grpc.py  test_tile_cache.py
tools/: build_Mef3Server_protobufs.sh  build_docker.sh  pull_docker.sh  run_docker.sh
