[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainmaze-mef3-server"
version = "0.1.0"
description = "A gRPC server and client for efficient, concurrent access to MEF3 files."
authors = [
    { name = "BNEL Team", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>2.0.0",
    "grpcio~=1.81.0",
    "grpcio-tools~=1.81.0",
    "protobuf>=6.33.5,<7.0.0",
    "mef_tools==1.2.3",
]

[project.optional-dependencies]
test = [
    "pytest~=8.4.2",
    "pytest-order",
    "pytest-benchmark",
    "tqdm",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
dev = [
    "pytest~=8.4.2",
    "pytest-order",
    "pytest-benchmark",
    "tqdm",
    "build",
]

[tool.pytest.ini_options]
markers = [
    "slow: long-running functional tests (run manually, not in CI)",
    "benchmark: performance benchmarks (run manually, not in CI)",
]
# CI runs plain `pytest`; slow/benchmark suites are opt-in via `-m slow` / `-m benchmark`.
addopts = "-m 'not slow and not benchmark'"

[tool.setuptools.packages.find]
where = ["."]
include = ["bnel_mef3_server*"]

[tool.setuptools]
include-package-data = true

