[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mef3io-server"
version = "3.0.1"
description = "A gRPC server and client for efficient, concurrent access to MEF3 files."
authors = [
    { name = "Filip Mivalt", email = "mivalt.filip@mayo.edu" }
]
readme = "README.md"
# PEP 639 SPDX expression (required as a string by setuptools >= 77; the older
# table form { text = ... } is rejected there).
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "numpy>2.0.0",
    "grpcio~=1.81.0",
    "grpcio-tools~=1.81.0",
    "protobuf>=6.33.5,<7.0.0",
    "mef3io>=1.0.1",
]

[project.optional-dependencies]
test = [
    "pytest~=8.4.2",
    "pytest-order",
    "pytest-benchmark",
    "tqdm",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9,<10",
    "mkdocstrings[python]>=0.24",
]
dev = [
    "pytest~=8.4.2",
    "pytest-order",
    "pytest-benchmark",
    "tqdm",
    "build",
]

[tool.pytest.ini_options]
markers = [
    "slow: long-running functional tests (run manually, not in CI)",
    "benchmark: performance benchmarks (run manually, not in CI)",
    "crossover: heavy crossover-curve analysis, opt-in only via `-m crossover`",
]
# CI runs plain `pytest`; slow/benchmark/crossover suites are opt-in via markers.
# `crossover` is excluded from `-m benchmark` too, so it never runs in a normal sweep.
addopts = "-m 'not slow and not benchmark and not crossover'"

[tool.setuptools.packages.find]
where = ["."]
include = ["mef3io_server*"]

[tool.setuptools]
include-package-data = true

